test/Fail/Issue933.err
Issue933.agda:20.38-47: error: [UnequalTerms]
The terms
  Γ.R
and
  Γ.O
are not equal at type Set
when checking that the expression Γ.refl γo has type Γ.O
